// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`detect has import react-i18n case 1 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t,
    i18n = _useTranslation.i18n;
  return <div name={t(\\"key_属性\\")}>{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`detect has import react-i18n case 2 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t,
    i18n = _useTranslation.i18n;
  return <div name={t(\\"key_属性\\")}>{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`detect has import react-i18n case 3 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    i18n = _useTranslation.i18n,
    t = _useTranslation.t;
  return <div name={t(\\"key_属性\\")}>{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`function declaration scenario detect has import react-i18n case 4 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = Component;
var _reactI18next = require(\\"react-i18next\\");
function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    i18n = _useTranslation.i18n,
    t = _useTranslation.t;
  return <div name={t(\\"key_属性\\")}>{t(\\"key_站位文本\\")}</div>;
}"
`;

exports[`function declaration scenario function declaration - useHooks 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.useComponent = useComponent;
var _reactI18next = require(\\"react-i18next\\");
function useComponent() {
  var var1 = t(\\"key_变量1\\");
  return [var1];
}"
`;
